@@ -55,11 +55,11 @@ $_MODULE['<{packetery}prestashop>packetery_a4f70091d9d7af3201e79bce9c5f6543'] = 
 $_MODULE['<{packetery}prestashop>packetery_36c8fa1514f56cef3a7e2c783ec819cf'] = 'Označení odesílatele najdete najdete v klientské sekci';
 $_MODULE['<{packetery}prestashop>packetery_9c1ed763194eba6e2819ce9d84d37cb2'] = 'v poli \"označení\".';
 $_MODULE['<{packetery}prestashop>packetery_1f597c0dada2621a92c1ee79e6b43999'] = 'Formát štítkov';
-$_MODULE['<{packetery}prestashop>packetery_5df9377515dc5fba190cd021d1807316'] = '1/8 A4, tisk na A4, 8ks/stránka';
-$_MODULE['<{packetery}prestashop>packetery_1e5b2eadf83c2678a69f1d4608b673c8'] = '105x35mm A4, tisk na A4, 16ks/stránka';
-$_MODULE['<{packetery}prestashop>packetery_ff0c01bbc46cf7e4687f36889fbb9270'] = '1/4 A4, tisk na A4, 4ks/stránka';
-$_MODULE['<{packetery}prestashop>packetery_4b7b2401eede004b1901ebd3f73bb286'] = '1/8 A4, přímý tisk, 1ks/stránka';
-$_MODULE['<{packetery}prestashop>packetery_b457f4aa9f09cd579e9df57dd154ed57'] = '1/16 A4, přímý tisk, 1ks/stránka';
+$_MODULE['<{packetery}prestashop>packetery_5df9377515dc5fba190cd021d1807316'] = '1/8 A4, tlač na A4, 8ks/strana';
+$_MODULE['<{packetery}prestashop>packetery_1e5b2eadf83c2678a69f1d4608b673c8'] = '105x37mm, tlač na A4, 16ks/strana';
+$_MODULE['<{packetery}prestashop>packetery_ff0c01bbc46cf7e4687f36889fbb9270'] = '1/4 A4, priama tlač, 4ks/strana';
+$_MODULE['<{packetery}prestashop>packetery_4b7b2401eede004b1901ebd3f73bb286'] = '1/8 A4, tlač na A4, 1ks/strana';
+$_MODULE['<{packetery}prestashop>packetery_b457f4aa9f09cd579e9df57dd154ed57'] = '1/16 A4, tlač na A4, 1ks/strana';
 $_MODULE['<{packetery}prestashop>packetery_9aa49c5a01dab7e49c73343b47e995a2'] = 'Vyberte prosím výdejní místo';
 $_MODULE['<{packetery}prestashop>packetery_b18ce70ed15a7a117141d6ee14f9138c'] = 'Výdejní místo bylo úspěšně změněno.';
 $_MODULE['<{packetery}prestashop>packetery_f1111e5bc2fc07a2985e5273341fbd7b'] = 'Výdejní místo se nepodařilo změnit.';
@@ -88,6 +88,12 @@ $_MODULE['<{packetery}prestashop>configure_f4f70727dc34561dfde1a3c529b6205c'] = 
 $_MODULE['<{packetery}prestashop>configure_485115c849e2941a8608587cab909927'] = 'Výdejní místa';
 $_MODULE['<{packetery}prestashop>tab_settings_2f5fdf39f1e94a9a62df58227b00845b'] = 'Seznam dopravců';
 $_MODULE['<{packetery}prestashop>tab_settings_5ece607071fe59ddc4c88dc6abfe2310'] = 'Nenašli sa žiadne položky';
+$_MODULE['<{packetery}prestashop>list_header_36e5769d3d33717f601e1f1dc3409d11'] = 'Tisk štítků';
+$_MODULE['<{packetery}prestashop>list_header_910b7b9a83a45de4d15f9c5b141a087b'] = 'Nevynechávat žádné pole';
+$_MODULE['<{packetery}prestashop>list_header_bee548697b56304883fdbd8436000eb3'] = 'Vynechat 1 pole';
+$_MODULE['<{packetery}prestashop>list_header_5182dfef2124178acde4250919ba2c4f'] = 'Vynechat %s polí';
+$_MODULE['<{packetery}prestashop>list_header_ea4788705e6873b424c65e91c2846b19'] = 'Zrušit';
+$_MODULE['<{packetery}prestashop>list_header_40cd014b7b6251e3a22e6a45a73a64e1'] = 'Provést';
 $_MODULE['<{packetery}prestashop>widget_422f03dbebc5e4e66d1d5b7e4564c355'] = 'Vybrať miesto vyzdvihnutia:';
 $_MODULE['<{packetery}prestashop>widget_81bd9c17af94c31967cdb6870f154d83'] = 'Vybrané miesto vyzdvihnutia:';
 $_MODULE['<{packetery}prestashop>widget_397164405b87202533b09fd47a137141'] = 'Vyberte prosím před potvrzením objednávky výdejní místo';
@@ -114,6 +120,8 @@ $_MODULE['<{packetery}prestashop>packeteryordergridcontroller_346bb64d32d0b3222f
 $_MODULE['<{packetery}prestashop>packeteryordergridcontroller_d6bd7c88c16b841e2fbb2d56ba501eac'] = 'CSV Export';
 $_MODULE['<{packetery}prestashop>packeteryordergridcontroller_ddd6dc80580e42e39480b99a2fd30e1e'] = 'Objednávky Zásilkovna';
 $_MODULE['<{packetery}prestashop>packeteryordergridcontroller_a649d29479834d551b83b533b7042ad3'] = 'Nebyly vybrány žádné objednávky.';
+$_MODULE['<{packetery}prestashop>packeteryordergridcontroller_e24ad57fb2f078979a7f5c9979e88d5f'] = 'Nejprve prosím podejte vybrané zásilky.';
+$_MODULE['<{packetery}prestashop>packeteryordergridcontroller_5552dc553d496d4b06866ca45b890b4a'] = 'Najprv vyberte objednávky.';
 $_MODULE['<{packetery}prestashop>packeteryordergridcontroller_d5bced36fd88402506bdf9d99064697e'] = 'Hmotnosti objednávek byly uloženy.';
 $_MODULE['<{packetery}prestashop>packeteryordergridcontroller_13dba24862cf9128167a59100e154c8d'] = 'Tisknout';
 $_MODULE['<{packetery}prestashop>packeteryordergridcontroller_0095a9fa74d1713e43e370a7d7846224'] = 'Exportovat';
